<resources>
    <string name="app_name">Doctor HealthCare</string>

    <string name="text_choose_one">Share Via</string>
    <string name="splash_title">Doctor <b><style fontFamily="roboto_extra_bold">HealthCare</style></b></string>
    <string name="agree_and_continue">Tap "Agree &amp; Continue" to accept the Doctor\nHealthCare <b><u><style color="#FDAD3F">Terms of Service</style></u></b> &amp; <b><u><style color="#FDAD3F">Privacy Policy.</style></u></b></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="my_appointments">My Appointments</string>
    <string name="share">Share</string>
    <string name="rate_app">Rate us</string>
    <string name="logout">Logout</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="my_prescriptions">My Prescriptions</string>
    <string name="text_loading">Loading...</string>
    <string name="text_doctor">Doctor</string>
    <string name="text_medicine">Medicine</string>
    <string name="text_frequency">Frequency</string>
    <string name="text_duration">Duration</string>
    <string name="text_instruction">Instruction</string>
    <string name="hint_choose_medicines">Choose Medicines</string>
    <string name="btn_add_medicine">Add medicine</string>
    <string name="text_medicine_name">Medicine Name</string>
    <string name="text_symptoms">Symptoms</string>
    <string name="hint_symptom">Symptom</string>
    <string name="text_give_advice_to_patient">Give advice to patient</string>
    <string name="hint_advice">Advice</string>
    <string name="text_add_a_note">Add a note</string>
    <string name="hint_note">Note</string>
    <string name="btn_submit_prescription">Submit Prescription</string>
    <string name="text_patient_name">Patient Name</string>
    <string name="text_patient_symptom">patient symptom</string>
    <string name="text_doctor_department">Doctor Department</string>
    <string name="text_hospital_name_and_address">LEED HMS • Dhaka</string>
    <string name="text_date_and_time">08-12-2020 at 07:30 - 09:30</string>
    <string name="btn_add_prescription">Add Prescription</string>
    <string name="text_doctor_name">Doctor Name</string>
    <string name="text_doctor_address">Doctor Address</string>
    <string name="text_consultation_fees">~ 500 rs consultation fees</string>
    <string name="btn_book_video_consult">Book Video Consult</string>
    <string name="btn_book_appointment">Book Appointment</string>
    <string name="text_no_appointments">You don\'t have any appointments !</string>
    <string name="text_create_account">Create Account</string>
    <string name="text_already_have_an_account">Already have an account?</string>
    <string name="text_sign_in">Sign In</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_optional">Email (optional)</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="text_password">Password</string>
    <string name="hint_password">********</string>
    <string name="text_confirm_password">Confirm password</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_don_t_have_an_account">Don\'t have an account?</string>
    <string name="text_email_or_phone_number">Email or Phone number</string>
    <string name="text_my_appointments">My Appointments</string>
    <string name="text_choose_user_type">Who are you?</string>
    <string name="text_patient">Patient</string>
    <string name="btn_next">Next</string>
    <string name="text_gender">Gender</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_others">Others</string>
    <string name="text_date_of_birth">Date of birth</string>
    <string name="text_date">2020-08-12</string>
    <string name="text_blood_group">Blood group</string>
    <string name="text_address">Address</string>
    <string name="hint_address_optional">Address (Optional)</string>
    <string name="btn_update_profile">Update Profile</string>
    <string name="text_department">Department</string>
    <string name="hint_choose_your_specialization">Choose your Specialization</string>
    <string name="text_choose_hospital">Choose Hospital</string>
    <string name="text_hospital_name">Hospital Name</string>
    <string name="text_set_your_visit_amount">Set Your Visit Amount</string>
    <string name="hint_amount">Amount</string>
    <string name="text_choose_days_of_week">Choose Days of Week</string>
    <string name="text_start_time">Start time</string>
    <string name="hint_time_only">06:00 AM</string>
    <string name="text_end_time">End time</string>
    <string name="btn_add_timeslots">Add TimeSlots</string>
    <string name="text_my_timeslots">My TimeSlots</string>
    <string name="text_no_timeslots_found">No TimeSlots found !</string>
    <string name="text_choose_date_of_holidays">Choose Date of Holidays</string>
    <string name="text_choose_date">Choose date</string>
    <string name="btn_add_holidays">Add Holidays</string>
    <string name="text_my_holidays">My Holidays</string>
    <string name="text_no_holidays_found">No Holidays found !</string>
    <string name="btn_edit_profile">Edit profile</string>
    <string name="text_my_prescriptions">My Prescriptions</string>
    <string name="text_share_app">Share App</string>
    <string name="text_rate_us">Rate Us</string>
    <string name="text_logout">Logout</string>
    <string name="text_you_don_t_have_any_prescriptions">You don\'t have any prescriptions !</string>
    <string name="text_generic_name">Generic name</string>
    <string name="btn_add_new_medicine">Add New Medicine</string>
    <string name="text_all_medicines">All Medicines</string>
    <string name="text_no_doctors_found">No Doctors Found !</string>
    <string name="text_create_profile">Create Profile</string>
    <string name="text_please_create_your_profile_to_get_best_services_from_us">Please create your profile to get best services from us</string>
    <string name="text_amount">Amount</string>
    <string name="text_appointment_booked_nsuccessfully">Appointment booked\nsuccessfully</string>
    <string name="btn_done">Done</string>
    <string name="text_your_appointment_is_confirmed">Your appointment is confirmed</string>
    <string name="hint_date_and_time"><![CDATA[Date & Time]]></string>
    <string name="text_hospital_details">Hospital details</string>
    <string name="text_procedure">Procedure</string>
    <string name="text_consultation">Consultation</string>
    <string name="text_appointment_for">Appointment for</string>
    <string name="text_choose_timings">Choose Timings</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_phone_number_optional">Phone number (optional)</string>
    <string name="btn_confirm_appointment">Confirm Appointment</string>
    <string name="btn_edit_prescription">Edit Prescription</string>
    <string name="text_video_consultation">Video Consultation</string>
    <string name="text_booking_type">What would you like to book?</string>
    <string name="text_in_clinic_appointment">In-clinic Appointment</string>


</resources>
