<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_outline"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_outline"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/ic_appointment_outline"
            android:title="@string/my_appointments" />
        <item
            android:id="@+id/nav_prescriptions"
            android:icon="@drawable/ic_prescription"
            android:title="@string/my_prescriptions" />
        <item
            android:id="@+id/nav_rate_app"
            android:icon="@drawable/ic_rate_us"
            android:title="@string/rate_app" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

</menu>