<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateDoctorProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_create_doctor_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:visibility="gone"
        app:elevation="@dimen/elevation_0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_create_doctor_profile_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarColoredBackArrow"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:subtitleTextAppearance="@style/ToolbarSubtitleAppearance"
            app:titleTextAppearance="@style/ToolbarTitleAppearance"
            app:titleTextColor="@color/primaryTextColor" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_32"
                android:text="@string/text_create_profile"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/font_22"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:text="@string/text_please_create_your_profile_to_get_best_services_from_us"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/font_18" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_32"
                android:text="@string/text_department"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/font_16" />

            <TextView
                android:id="@+id/edt_choose_department"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_16"
                android:background="@drawable/edit_text_background_style"
                android:gravity="center|start"
                android:hint="@string/hint_choose_your_specialization"
                android:paddingStart="@dimen/padding_12"
                android:paddingEnd="@dimen/padding_12"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/font_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/text_choose_hospital"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/font_16" />

            <TextView
                android:id="@+id/edt_choose_hospital"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_16"
                android:background="@drawable/edit_text_background_style"
                android:gravity="center|start"
                android:hint="@string/text_hospital_name"
                android:paddingStart="@dimen/padding_12"
                android:paddingEnd="@dimen/padding_12"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/font_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/text_set_your_visit_amount"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/font_16" />

            <EditText
                android:id="@+id/edt_set_visit_amount"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_16"
                android:background="@drawable/edit_text_background_style"
                android:drawableStart="@drawable/ic_rupee"
                android:drawablePadding="@dimen/padding_8"
                android:drawableTint="@color/primaryTextColor"
                android:hint="@string/text_amount"
                android:inputType="number"
                android:paddingStart="@dimen/padding_12"
                android:paddingEnd="@dimen/padding_12"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/font_16" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/text_address"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/font_16" />

            <EditText
                android:id="@+id/edt_set_address_doc"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_16"
                android:background="@drawable/edit_text_background_style"
                android:hint="@string/hint_address_optional"
                android:inputType="textPostalAddress"
                android:maxLines="2"
                android:paddingStart="@dimen/padding_12"
                android:paddingEnd="@dimen/padding_12"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/font_16" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_doc_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:textSize="@dimen/button_text_size"
                android:text="@string/text_create_account"
                android:textAllCaps="false" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>