<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".fragments.SigninFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_32"
            android:text="@string/text_sign_in"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/font_22"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/text_don_t_have_an_account"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/font_18" />

            <TextView
                android:id="@+id/tv_goto_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/padding_8"
                android:text="@string/text_sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_18"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_64"
            android:text="@string/text_email_or_phone_number"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/font_16" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_16"
            android:background="@drawable/edit_text_background_style"
            android:hint="@string/text_email_or_phone_number"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/padding_12"
            android:paddingEnd="@dimen/padding_12"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/font_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/text_password"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/font_16" />

        <EditText
            android:id="@+id/edt_password_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_16"
            android:background="@drawable/edit_text_background_style"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/padding_12"
            android:paddingEnd="@dimen/padding_12"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/font_16" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:text="@string/text_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

</ScrollView>