<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_screen_background"
    tools:context=".activities.WelcomeActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_64"
        android:src="@drawable/app_logo" />

    <TextView
        android:id="@+id/user_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_12"
        android:text="@string/text_choose_user_type"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/font_22" />

    <RadioGroup
        android:id="@+id/rg_user_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_type_text"
        android:layout_margin="@dimen/margin_32"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/rb_patient"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@null"
            android:text="@string/text_patient"
            android:textAlignment="center"
            android:textSize="@dimen/font_18" />

        <RadioButton
            android:id="@+id/rb_doctor"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@null"
            android:text="@string/text_doctor"
            android:textAlignment="center"
            android:textSize="@dimen/font_18" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_24"
        android:text="@string/btn_next"
        android:visibility="gone"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold" />

</RelativeLayout>